--- a/src/Components/BillList/BillList.css
+++ b/src/Components/BillList/BillList.css
@@ -1,17 +1,23 @@
 .bill-list {
   background-color: green;
   border-radius: 15px;
-  width: 168px;
-  height: 420px;
+  width: 200px;
+  height: 580px;
   position: relative;
   padding: 15px;
+  padding-bottom: 35px;
 }
 .top {
   margin-bottom: 20px;
 }
+
+.right-bills > .input-field > label {
+  width: 80px;
+}
+
 #refresh {
   position: absolute;
-  top: -5px;
+  top: -2px;
   left: -10px;
   rotate: 95deg;
   color: black;
@@ -39,6 +45,40 @@
   position: absolute;
   left: 40px;
   width: 3px;
-  height: 140px;
+  height: 157px;
   background-color: black;
+}
+
+.right-bills > .bill-list > .bottom > .line {
+  height: 265px;
+}
+
+.fa-refresh:hover{
+  cursor: pointer;
+}
+
+@media screen and (max-width: 550px) {
+  .bill-list p {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .bill-list h5 {
+    color: black;
+    margin: 3px 0 3px 0;
+    padding-left: 10px;
+  }
+
+  .bill-list p {
+    margin: 3px 0 3px 0;
+    padding-left: 30px;
+  }
+  .line {
+    position: absolute;
+    left: 25px;
+    width: 3px;
+    height: 157px;
+    background-color: black;
+  }
 }
