--- a/src/Components/InputForm/InputForm.css
+++ b/src/Components/InputForm/InputForm.css
@@ -4,6 +4,10 @@ form {
   color: white;
   font-size: 24px;
 }
+ .right-bills > .input-field {
+  font-size: 14px;
+  width: 200px;
+}
 
 .bills {
   display: flex;
@@ -48,4 +52,100 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
   appearance: textfield;
+}
+
+.switch-text {
+  color: black;
+  margin-top: 50px;
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.setting {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 550px){
+  form {
+    font-size: 18px;
+  }
+
+  .input-field > input {
+    width: 50px;
+    border-radius: 15px;
+  }
+  .right-bills > .input-field {
+  font-size: 14px;
+  width: 150px;
+}
+  .right-bills > label::after {
+    content: "Base Till"
+  }
+
+  .bill-list {
+    width: 150px;
+  }
+  .bills {
+    gap: 50px;
+  }
+  heading > h1 {
+    font-size: 20px;
+  }
+  heading > h4 {
+    font-size: 14px;
+  }
+  .input-field > input {
+    color: rgb(11, 148, 11);
+    border-radius: 20px;
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    background-color: #b0b0b1;
+    font-weight: 600;
+    margin-left: 0px;
+  }
+
+  .bill-list {
+    height: 480px;
+  }
+
+  .line {
+    height: 140px;
+  }
+  .right-bills > .bill-list > .bottom > .line {
+    height: 235px;
+  }
+}
+
+
+@media screen and (max-width: 400px) {
+  .input-field {
+    width: 100px;
+    font-size: 15px;
+  }
+  .input-field > label {
+    width: 40px;
+  }
+
+  .bills {
+    gap: 20px;
+  }
+
+  .bill-list {
+    width: 130px;
+  }
+  .right-bills > .input-field {
+    width: 130px;
+  }
+  .right-bills > .input-field > label{
+    width: 70px;
+  }
+  .switch-text {
+    font-size: 14px;
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 10px;
+  }
 }
