--- a/src/Components/InputForm/InputForm.css
+++ b/src/Components/InputForm/InputForm.css
@@ -60,6 +60,7 @@ input[type=number] {
   margin-left: 10px;
   font-size: 18px;
   font-weight: 500;
+  width: 190px;
 }
 
 .setting {
@@ -117,6 +118,15 @@ input[type=number] {
   .right-bills > .bill-list > .bottom > .line {
     height: 235px;
   }
+
+  .switch-text {
+    color: black;
+    margin-top: 50px;
+    margin-left: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    width: 130px;
+  }
 }
 
 
@@ -135,6 +145,9 @@ input[type=number] {
 
   .bill-list {
     width: 130px;
+  }
+  .right-bills {
+    width: 160px;
   }
   .right-bills > .input-field {
     width: 130px;
