--- a/src/Components/Switch/Switch.css
+++ b/src/Components/Switch/Switch.css
@@ -11,7 +11,7 @@
   cursor: pointer;
   width: 50px;
   height: 25px;
-  background: grey;
+  background: red;
   border-radius: 100px;
   position: relative;
   transition: background-color .2s;
